# relay-daemon

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: .clang-format  CMakeLists.txt
src/lib/: CMakeLists.txt  Tornado.cmake  cmake_gen.toml  daemon.c  daemon.h  main.c  version.h
